--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+i{
+	padding: 15px;
+}
+
 /* SIDEBAR MENU*/
 
 .sidenav {
@@ -12,36 +16,26 @@ body{
   top: 0; /* Stay at the top */
   left: 0;
   overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 20px;
-}
-
-/* The navigation menu links */
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
+  background-image: linear-gradient(#5377e0, #224abe);
+  color: white;
 }
 
 /* When you mouse over the navigation links, change their color */
 .sidenav a:hover {
-  color: #f1f1f1;
-  background-image: linear-gradient(#5377e0, #224abe);
-  overflow-x: hidden; /* Disable horizontal scroll */
   padding-top: 20px;
-  
+  background-color: #3080ff;
 }
 
 /* The navigation menu links */
 
-.sidenav a {
-  padding: 16px 8px 16px 16px;
+.container-fluid .sidenav a {
+  padding: 16px 8px 16px 0;
   text-decoration: none;
   font-size: 12px;
   display: block;
   font-weight: bold;
   color: white;
+  border-top: 1px solid white;
 }
 
 .sidenav .enlarged{
@@ -49,15 +43,9 @@ body{
 	font-weight: bold;
 }
 
-
-/* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  color: gray;
-}
-
 /* Style page content */
 .main {
-  margin-left: 160px; /* Same as the width of the sidebar */
+  margin-left: 200px; /* Same as the width of the sidebar */
   padding: 0px 10px;
 }
 
