--- a/style.css
+++ b/style.css
@@ -2,13 +2,21 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-i{
+i,h3{
 	padding: 15px;
+}
+h3{
+	padding-bottom: 0;
+}
+
+nav{
+	width: 80%;
+	margin: auto;
 }
 
 /* SIDEBAR MENU*/
 
-.sidenav {
+#sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 200px; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
@@ -20,25 +28,50 @@ i{
   color: white;
 }
 
+#sidenav.active {
+	min-width: 80px;
+	max-width: 80px;
+	text-align:center;
+}
+
+#sidenav.active a, #sidenav.active h3{
+	font-size: 0px !important;
+}
+
+#sidenav.active i{
+	font-size: 16px;
+}
+
+#collapseBtn{
+	display: block;
+	margin: auto;
+	background-color:#5f7ed8;
+	border: none;
+	cursor: pointer;
+	border-radius: 60px;
+	color: #97b0e7;
+}
+
 /* When you mouse over the navigation links, change their color */
-.sidenav a:hover {
-  padding-top: 20px;
+#sidenav a:hover {
+  padding-top: 5px;
+  padding-bottom: 5px;
   background-color: #3080ff;
 }
 
 /* The navigation menu links */
 
-.container-fluid .sidenav a {
-  padding: 16px 8px 16px 0;
+.container-fluid #sidenav a {
+  
   text-decoration: none;
   font-size: 12px;
   display: block;
   font-weight: bold;
   color: white;
-  border-top: 1px solid white;
+  border-top: 1px groove white;
 }
 
-.sidenav .enlarged{
+#sidenav .enlarged{
 	font-size: 16px;
 	font-weight: bold;
 }
