--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body{
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-i,h3{
+i,h2{
 	padding: 15px;
 }
-h3{
+h2{
 	padding-bottom: 0;
 }
 
@@ -14,7 +14,7 @@ nav{
 	margin: auto;
 }
 
-/* SIDEBAR MENU*/
+/***************************************SIDEBAR MENU***************************************/
 
 #sidenav {
   height: 100%; /* Full-height: remove this if you want "auto" height */
@@ -34,7 +34,7 @@ nav{
 	text-align:center;
 }
 
-#sidenav.active a, #sidenav.active h3{
+#sidenav.active a, #sidenav.active h2{
 	font-size: 0px !important;
 }
 
@@ -76,14 +76,34 @@ nav{
 	font-weight: bold;
 }
 
-/* Style page content */
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
+
+/*************************************** MAIN PAGE ***************************************/
+
+h1{
+	font-size: 24px !important;
+	color: gray;
+	padding-top: 20px;
+}
+
 .main {
   margin-left: 200px; /* Same as the width of the sidebar */
   padding: 0px 10px;
+  font-size: 16px;
 }
 
-/* /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */ */
-/* @media screen and (max-height: 450px) { */
-  /* .sidenav {padding-top: 15px;} */
-  /* .sidenav a {font-size: 18px;} */
-/* } */
+.main label{
+	color: gray;
+}
+
+.input-group button{
+	color: #9299aa;
+	background-color: #d3d4d6;
+	border: none;
+	padding: 0;
+	margin: 0 0 10px 5px;
+}
