--- a/style.css
+++ b/style.css
@@ -96,7 +96,11 @@ h1{
   font-size: 16px;
 }
 
-.main label{
+.main.active {
+	margin-left: 80px;
+}
+
+.main label, p{
 	color: gray;
 }
 
@@ -106,4 +110,8 @@ h1{
 	border: none;
 	padding: 0;
 	margin: 0 0 10px 5px;
+}
+
+.inline{
+	display: inline;
 }
