Fill cards with content

--- a/style.css
+++ b/style.css
@@ -115,3 +115,12 @@ h1{
 .inline{
 	display: inline;
 }
+
+#probability{
+	font-weight: bold;
+}
+
+.blue{
+	color: #3c62d0;
+	font-weight: bold;
+}
